--- a/portfolio/templates/portfolio/blog.html
+++ b/portfolio/templates/portfolio/blog.html
@@ -1,9 +1,15 @@
 {% extends 'portfolio/layout.html' %}
 
 {% block main %}
+     <script>
+        function openAddPostWindow() {
+            window.open("{% url 'portfolio:novoPost' %}", "_blank", "width=800,height=600");
+        }
+    </script>
     <div class="escola">
         <div class="painel">
             <h1 class="titulo">Blog</h1>
+            <button class="btn" onclick="openAddPostWindow()">Add Post</button>
             {% for post in posts %}
                 <div class="disciplina">
                     <h3 style="text-align:left">{{ post.titulo }}</h3>
@@ -12,5 +18,5 @@
             {% endfor %}
         </div>
     </div>
-    <br>
+ <br>
 {% endblock %}
