--- a/portfolio/templates/portfolio/projetos.html
+++ b/portfolio/templates/portfolio/projetos.html
@@ -1,6 +1,18 @@
 {% extends 'portfolio/layout.html' %}
 
 {% block main %}
-	<h3>Projetos</h3>
-    <p></p>
+    <div class="escola">
+        <div class="painel">
+            <h3 class="titulo">Licenciatura</h3>
+                {% for trabalho in trabalhos %}
+                    <div class="disciplina">
+                        <h3>{{ trabalho.titulo }} - {{ trabalho.ano_realizacao }}</h3>
+                        <br><br>
+
+                        <br><br>
+                        <p>{{ trabalho.resumo }}</p>
+                    </div>
+                {% endfor %}
+        </div>
+    </div>
 {% endblock %}
